# pico-irrigation

./: CMakeLists.txt  README.md
inc/: CMakeLists.txt  GPIO_PINS.h  NRF24.c  NRF24.h  NRF24L01.h  SEN0308.c
prx/: CMakeLists.txt  prx.c
ptx_1/: CMakeLists.txt  ptx_1.c
rx/: CMakeLists.txt  rx.c
tx/: CMakeLists.txt  tx.c
